Adding Database.sol before removing Data.sol

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "tweedentity",
   "version": "0.0.1",
   "description": "tweedentity",
-  "devDependencies": {},
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "lodash": "^4.17.4",
     "sleep": "^5.1.1"
   },
