--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {},
   "devDependencies": {
     "lodash": "^4.17.4",
-    "sleep": "^5.1.1"
+    "sleep": "^5.1.1",
+    "web3": "^1.0.0-beta.30"
   },
   "scripts": {
     "testServer": "ganache-cli --mnemonic 'tweedentity'",
