--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "devDependencies": {
     "lodash": "^4.17.4",
     "sleep": "^5.1.1",
-    "web3": "^1.0.0-beta.30"
+    "truffle-hdwallet-provider": "0.0.3"
   },
   "scripts": {
     "testServer": "ganache-cli --mnemonic 'tweedentity'",
     "bridge": "cd ethereum-bridge && node bridge -H localhost:8545 -a 9 --dev",
     "test": "truffle test",
-    "clear": "rm -rf build/contracts"
+    "clear": "rm -rf build/contracts",
+    "deployToRinkeby": "rm -rf build && source ../ifo-rinkeby.env && truffle migrate --network rinkeby",
+    "deployToMainnet": "rm -rf build && source ../ifo-mainnet.env && truffle migrate --network mainnet"
   }
 }
