--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bridge": "cd ethereum-bridge && node bridge -H localhost:8545 -a 9 --dev",
     "test": "truffle test",
     "clear": "rm -rf build/contracts",
-    "deployToRinkeby": "rm -rf build && source ../../ifo-rinkeby.env && truffle migrate --network rinkeby",
-    "deployToMainnet": "rm -rf build && source ../../ifo-mainnet.env && truffle migrate --network mainnet"
+    "deployToRopsten": "rm -rf build && source ../../testnet.env && source ../../infura.env && truffle migrate --network ropsten",
+    "deployToMainnet": "rm -rf build && source ../../infura.env && truffle migrate --network mainnet"
   }
 }
