--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "authorizable"]
 	path = authorizable
 	url = https://github.com/tweedentity/authorizable
+[submodule "ethereum-api"]
+	path = ethereum-api
+	url = https://github.com/oraclize/ethereum-api.git
