--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "tweedentity",
   "dependencies": {},
   "devDependencies": {
+    "authorizable": "^0.1.2",
     "lodash": "^4.17.4",
     "sleep": "^5.1.1",
     "truffle-hdwallet-provider": "0.0.3",
@@ -15,6 +16,7 @@
     "test": "truffle test",
     "clear": "rm -rf build/contracts",
     "deployToRopsten": "rm -rf build && source ../../testnet.env && source ../../infura.env && truffle migrate --network ropsten",
-    "deployToMainnet": "rm -rf build && source ../../infura.env && truffle migrate --network mainnet"
+    "deployToMainnet": "rm -rf build && source ../../infura.env && truffle migrate --network mainnet",
+    "flatten": "truffle-flattener contracts/Store.sol > flattened/Store.sol && truffle-flattener contracts/Manager.sol > flattened/Manager.sol"
   }
 }
