--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "authorizable": "^0.1.2",
     "lodash": "^4.17.4",
     "sleep": "^5.1.1",
+    "truffle-flattener": "^1.2.5",
     "truffle-hdwallet-provider": "0.0.3",
     "zeppelin-solidity": "^1.8.0"
   },
