Towards the final version

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tweedentity",
   "dependencies": {},
   "devDependencies": {
-    "authorizable": "^0.1.2",
+    "authorizable": "^0.1.5",
     "lodash": "^4.17.4",
     "sleep": "^5.1.1",
     "truffle-flattener": "^1.2.5",
@@ -18,6 +18,6 @@
     "clear": "rm -rf build/contracts",
     "deployToRopsten": "rm -rf build && source ../../testnet.env && source ../../infura.env && truffle migrate --network ropsten",
     "deployToMainnet": "rm -rf build && source ../../infura.env && truffle migrate --network mainnet",
-    "flatten": "truffle-flattener contracts/Store.sol > flattened/Store.sol && truffle-flattener contracts/Manager.sol > flattened/Manager.sol"
+    "flatten": "truffle-flattener contracts/TweedentityStore.sol > flattened/TweedentityStore.sol && truffle-flattener contracts/TweedentityManager.sol > flattened/TweedentityManager.sol"
   }
 }
