--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "tweedentity",
-  "version": "0.0.1",
+  "version": "0.0.9",
   "description": "tweedentity",
   "dependencies": {},
   "devDependencies": {
-    "authorizable": "^0.1.6",
+    "authorizable": "^0.1.8",
     "lodash": "^4.17.4",
     "sleep": "^5.1.1",
     "truffle-flattener": "^1.2.5",
-    "truffle-hdwallet-provider": "0.0.3",
+    "truffle-hdwallet-provider": "0.0.5",
     "zeppelin-solidity": "^1.8.0"
   },
   "scripts": {
@@ -16,8 +16,8 @@
     "bridge": "cd ethereum-bridge && node bridge -H localhost:8545 -a 9 --dev",
     "test": "truffle test",
     "clear": "rm -rf build/contracts",
-    "deployToRopsten": "rm -rf build && source ../../testnet.env && source ../../infura.env && truffle migrate --network ropsten",
-    "deployToMainnet": "rm -rf build && source ../../infura.env && truffle migrate --network mainnet",
-    "flatten": "truffle-flattener contracts/TweedentityStore.sol > flattened/TweedentityStore.sol && truffle-flattener contracts/TweedentityManager.sol > flattened/TweedentityManager.sol"
+    "deployToRopsten": "rm -rf build && source ../testnet.env && source ../infura.env && truffle migrate --network ropsten",
+    "deployToMainnet": "rm -rf build && source ../infura.env && truffle migrate --network mainnet",
+    "flatten": "truffle-flattener contracts/TweedentityStore.sol > flattened/TweedentityStore.sol && truffle-flattener contracts/TweedentityManager.sol > flattened/TweedentityManager.sol && truffle-flattener contracts/TweedentityVerifier.sol > flattened/TweedentityVerifier.sol"
   }
 }
